--- a/distributed-transactions/distributed-transactions.csproj
+++ b/distributed-transactions/distributed-transactions.csproj
@@ -23,7 +23,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="sql\ddl\" />
+      <Folder Include="Dtos\" />
+      <Folder Include="Models\" />
     </ItemGroup>
 
 </Project>
